Trivial BackgroundScanHandler optimisations